fix layout issue

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12,6 +12,7 @@
 .overlay-img {
   position: absolute;
   top: 0;
+  z-index: 10;
   /*left: 0;*/
 }
 
